fix additional search component on search result page and fix alignment on tablet and mobile

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/search2.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/search2.less
@@ -180,6 +180,14 @@ html#adobeguides-dark-contrast {
 .custom-search-container {
   margin-bottom: 0.7rem;
 }
+@media (max-width: 1024px) {
+  .custom-search-container{
+    display: none;
+  }
+  .custom-container .gu-custom-container .col-9grid {
+    top: -3.4rem;
+  }
+}
 
 @media (max-width: 480px) {
   html.adobeguides-text-size{
